--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,4 +15,19 @@ html {
   body {
     background: none;
   }
+  
+  body, #app {
+    width: 100%;
+    height: 100%;
+  }
+
+  #app {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  input {
+    width: 100%;
+  }
 }
