--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,12 +5,16 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-vue/src/index';
 
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 html {
   width: 100%;
   height: 100%;
 
   background: $color-darkest;
   color: $color-light;
+
+  font-family: 'Roboto', sans-serif;
 
   body {
     background: none;
@@ -34,5 +38,18 @@ html {
 
   input {
     width: 100%;
+  }
+
+  button {
+    background: $color-accent-bright;
+    color: $color-light;
+    padding: 8px 16px;
+    border-radius: 8px;
+    border: none;
+
+    &:hover {
+        cursor: pointer;
+        background: lighten($color-accent-bright, 15%);
+    }
   }
 }
