--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-vue/src/index';
 
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cabin:400,700&display=swap');
 
 html {
   width: 100%;
@@ -14,7 +14,9 @@ html {
   background: $color-darkest;
   color: $color-light;
 
-  font-family: 'Roboto', sans-serif;
+  * {
+    font-family: 'Cabin', sans-serif;
+  }
 
   body {
     background: none;
@@ -48,8 +50,8 @@ html {
     border: none;
 
     &:hover {
-        cursor: pointer;
-        background: lighten($color-accent-bright, 15%);
+      cursor: pointer;
+      background: lighten($color-accent-bright, 15%);
     }
   }
 }
