--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,6 @@
 // color palette
 @import 'colors';
 
-// bootstrap
-@import '~bootstrap/scss/bootstrap';
-@import '~bootstrap-vue/src/index';
-
 @import url('https://fonts.googleapis.com/css?family=Cabin:400,700&display=swap');
 
 html {
@@ -19,6 +15,8 @@ html {
   }
 
   body {
+    overflow-x: hidden;
+    margin: 0;
     background: none;
   }
 
