--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -53,4 +53,14 @@ html {
       background: lighten($color-complementary-1, 3%);
     }
   }
+
+  font-size: 12px;
+
+  @media only screen and (min-width: 1500px) {
+    font-size: 16px;
+  }
+
+  @media only screen and (min-width: 1200px) {
+    font-size: 14px;
+  }
 }
