--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -54,13 +54,33 @@ html {
     }
   }
 
-  font-size: 12px;
+  font-size: 9px;
+
+  @media only screen and (min-width: 2000px) {
+    font-size: 20px;
+  }
 
   @media only screen and (min-width: 1500px) {
     font-size: 16px;
   }
 
   @media only screen and (min-width: 1200px) {
+    font-size: 15px;
+  }
+
+  @media only screen and (min-width: 800px) {
     font-size: 14px;
+  }
+
+  @media only screen and (min-width: 620px) {
+    font-size: 12px;
+  }
+
+  @media only screen and (min-width: 500px) {
+    font-size: 12px;
+  }
+
+  @media only screen and (min-width: 400px) {
+    font-size: 10px;
   }
 }
